# cpp-starter-template

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
apps/: CMakeLists.txt  my_project_cli.cpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
include/my_project/: foo.hpp
scripts/: format.sh
src/: CMakeLists.txt  foo.cpp
tests/: CMakeLists.txt  test_foo.cpp
